--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.10)
 project(ListVSArray)
 
 add_executable(main main.cpp)
+set_property(TARGET main PROPERTY CXX_STANDARD 23)
